# asterization

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_demo.py
grav_font/: __init__.py  config.py  presets.py
grav_font/glyphs/: __init__.py  target.py
grav_font/physics/: __init__.py  simulator.py
grav_font/render/: __init__.py  pen_render.py
grav_font/visualize/: __init__.py  viewer.py
